--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.thing {
+  background: #e12a4f;
+  clip-path: polygon(100% 0, 0 0, 0 50%, 100% 100%);
+  min-height: 120px;
+  padding-top: 20px;
+  padding-bottom: 100px;
+  width: 100%;
+}
